--- a/css/style.css
+++ b/css/style.css
@@ -206,7 +206,7 @@ h1, h2, h3, h4, h5, h6, figure {
   display: -moz-inline-stack;
   display: inline-block;
   zoom: 1;
-  *display: inline;
+  display: inline;
   -webkit-transition: 0.3s;
   -o-transition: 0.3s;
   transition: 0.3s;
@@ -405,7 +405,7 @@ h1, h2, h3, h4, h5, h6, figure {
 #fh5co-counter .event-wrap,
 #fh5co-event .event-wrap {
   border: 2px solid rgba(0, 0, 0, 0.5);
-  padding: 30px;
+  /* padding: 30px; */
   width: 100%;
   float: left;
   -webkit-border-radius: 4px;
@@ -766,13 +766,13 @@ h1, h2, h3, h4, h5, h6, figure {
   display: -moz-inline-stack;
   display: inline-block;
   zoom: 1;
-  *display: inline;
+  display: inline;
 }
 .fh5co-social-icons li a {
   display: -moz-inline-stack;
   display: inline-block;
   zoom: 1;
-  *display: inline;
+  display: inline;
   color: #646464;
   padding-left: 10px;
   padding-right: 10px;
@@ -878,7 +878,7 @@ form label {
   #fh5co-header .display-tc h2,
   #fh5co-counter .display-tc h2,
   .fh5co-cover .display-tc h2 {
-    font-size: 16px;
+    font-size: 26px;
   }
 }
 #fh5co-header .display-tc .btn,
@@ -1184,7 +1184,7 @@ form label {
   display: -moz-inline-stack;
   display: inline-block;
   zoom: 1;
-  *display: inline;
+  display: inline;
   width: 100px;
   height: 100px;
 }
@@ -1425,6 +1425,7 @@ form label {
   padding: 0;
   margin: 0;
   list-style: none;
+  font-size: 26px;
 }
 #fh5co-offcanvas ul li > ul {
   padding-left: 20px;
