--- a/css/style.css
+++ b/css/style.css
@@ -404,14 +404,14 @@ h1, h2, h3, h4, h5, h6, figure {
 }
 #fh5co-counter .event-wrap,
 #fh5co-event .event-wrap {
-  border: 2px solid rgba(0, 0, 0, 0.5);
+  border: 5px solid rgba(0, 0, 0, 0.5);
   /* padding: 30px; */
   width: 100%;
   float: left;
   -webkit-border-radius: 4px;
   -moz-border-radius: 4px;
   -ms-border-radius: 4px;
-  border-radius: 4px;
+  border-radius: 12px;
 }
 @media screen and (max-width: 768px) {
   #fh5co-counter .event-wrap,
@@ -423,7 +423,7 @@ h1, h2, h3, h4, h5, h6, figure {
 #fh5co-event .event-wrap h3 {
   font-size: 14px;
   color: #000000;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.5);
+  border-bottom: 3px solid rgba(0, 0, 0, 0.5);
   display: block;
   padding-bottom: 20px;
   text-transform: uppercase;
@@ -449,6 +449,7 @@ h1, h2, h3, h4, h5, h6, figure {
   width: 50%;
   float: left;
   margin-bottom: 30px;
+  border-bottom: 3px solid rgba(0, 0, 0, 0.5);
 }
 
 #fh5co-counter {
@@ -973,6 +974,7 @@ form label {
   #fh5co-gallery,
   .fh5co-section {
     padding: 3em 0;
+    /* padding: 6px; */
   }
 }
 
