--- a/css/style.css
+++ b/css/style.css
@@ -677,12 +677,12 @@ h1, h2, h3, h4, h5, h6, figure {
 #fh5co-gallery-list li a {
   min-height: 400px;
   padding: 2em;
-  position: relative;
+  /* position: relative; */
   width: 100%;
   display: block;
 }
 #fh5co-gallery-list li a:before {
-  position: absolute;
+  /* position: absolute; */
   top: 0;
   left: 0;
   right: 0;
