--- a/css/style.css
+++ b/css/style.css
@@ -65,9 +65,10 @@ p {
 
 h1, h2, h3, h4, h5, h6, figure {
   color: #000;
-  font-family: "Work Sans", Arial, sans-serif;
+  font-family: auto;
   font-weight: 400;
   margin: 0 0 20px 0;
+  padding: 12px;
 }
 
 ::-webkit-selection {
@@ -382,7 +383,7 @@ h1, h2, h3, h4, h5, h6, figure {
 }
 #fh5co-counter .overlay,
 #fh5co-event .overlay {
-  position: absolute;
+  /* position: absolute; */
   top: 0;
   left: 0;
   right: 0;
