--- a/css/style.css
+++ b/css/style.css
@@ -358,7 +358,7 @@ h1, h2, h3, h4, h5, h6, figure {
 
 #fh5co-counter,
 #fh5co-event {
-  height: 850px;
+  /* height: 850px; */
   float: left;
 }
 #fh5co-counter .display-t,
@@ -414,6 +414,7 @@ h1, h2, h3, h4, h5, h6, figure {
   -ms-border-radius: 4px;
   border-radius: 12px;
 }
+
 @media screen and (max-width: 768px) {
   #fh5co-counter .event-wrap,
   #fh5co-event .event-wrap {
